--- a/BusinessPlanWriter/BusinessPlanWriter.csproj
+++ b/BusinessPlanWriter/BusinessPlanWriter.csproj
@@ -156,17 +156,17 @@
     can be found.
   -->
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Section1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Section1.Designer.cs">
+      <DependentUpon>Section1.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Section1.resx">
+      <DependentUpon>Section1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -179,6 +179,24 @@
     </Compile>
     <EmbeddedResource Include="Ribbon.resx">
       <DependentUpon>Ribbon.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Section2.resx">
+      <DependentUpon>Section2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Section3.resx">
+      <DependentUpon>Section3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Section4.resx">
+      <DependentUpon>Section4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Section5.resx">
+      <DependentUpon>Section5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Section6.resx">
+      <DependentUpon>Section6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Section7.resx">
+      <DependentUpon>Section7.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TaskPaneControl.resx">
       <DependentUpon>TaskPaneControl.cs</DependentUpon>
@@ -197,6 +215,42 @@
     </Compile>
     <Compile Include="Ribbon.Designer.cs">
       <DependentUpon>Ribbon.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Section2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Section2.Designer.cs">
+      <DependentUpon>Section2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Section3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Section3.Designer.cs">
+      <DependentUpon>Section3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Section4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Section4.Designer.cs">
+      <DependentUpon>Section4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Section5.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Section5.Designer.cs">
+      <DependentUpon>Section5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Section6.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Section6.Designer.cs">
+      <DependentUpon>Section6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Section7.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Section7.Designer.cs">
+      <DependentUpon>Section7.cs</DependentUpon>
     </Compile>
     <Compile Include="TaskPaneControl.cs">
       <SubType>UserControl</SubType>
