--- a/BusinessPlanWriter/BusinessPlanWriter.csproj
+++ b/BusinessPlanWriter/BusinessPlanWriter.csproj
@@ -104,6 +104,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -198,6 +199,9 @@
     <EmbeddedResource Include="Section7.resx">
       <DependentUpon>Section7.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="TableCreator.resx">
+      <DependentUpon>TableCreator.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TaskPaneControl.resx">
       <DependentUpon>TaskPaneControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -251,6 +255,12 @@
     </Compile>
     <Compile Include="Section7.Designer.cs">
       <DependentUpon>Section7.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TableCreator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TableCreator.Designer.cs">
+      <DependentUpon>TableCreator.cs</DependentUpon>
     </Compile>
     <Compile Include="TaskPaneControl.cs">
       <SubType>UserControl</SubType>
